# pico_apps

./: LICENSE  README.md
ahrs/: BNO055.c  BNO055.h  CMakeLists.txt  README.md  ahrs_main.c  lin_alg_float.h
ahrs_mexp/: CMakeLists.txt  ahrs_m_update.c  ahrs_m_update.h  ahrs_main.c
ahrs_q_double/: CMakeLists.txt  ahrs_main.c  lin_alg_float.c
ahrs_qml/: CMakeLists.txt  ahrs_main.c  ahrs_q_update.c  ahrs_q_update.h  rtwtypes.h
